refactor: changed way commissions are stored
* replaced enum Commission by a table. This allows for ordering and
  setting names for each commission
* changed return template of route GET /users/orgas
